# OpenEnvDataCL

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  cleaner_env.py  grader.py  graders.py  models.py  tasks.py
server/: app.py  environment.py  grader.py
